--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
 
 body {
 	margin: 26px 20px 48px;
-	font-family:'Roboto',Roboto Lt;
+	
 }
 
 header title{
@@ -32,7 +32,7 @@ header title{
 }
 header span {
 	margin-left: 12px;
-	font-family: Roboto-Bold;
+	font-family: Roboto-Medium;
 	font-size: 18px;
 	color: #3C3C3C;
 }
