--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,3 @@
-@font-face {
-  font-family: Roboto-Regular;
-  src: local('Roboto'), local('Roboto-Regular');
-}
-@font-face {
-  font-family: Roboto-Bold;
-  src: local('Roboto Bold'), local('Roboto-Bold');
-  font-weight: 700;
-}
-@font-face {
-  font-family: Roboto-BoldCondensed;
-  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold');
-}
-@font-face {
-  font-family: Roboto-Medium;
-  src: local('Roboto Medium'), local('Roboto-Medium');
-}
-
 * {
 	border:0;
 	padding: 0px;
@@ -24,7 +6,7 @@
 
 body {
 	margin: 26px 20px 48px;
-	
+	font-family:'Roboto',Roboto Lt;
 }
 
 header title{
@@ -32,10 +14,7 @@ header title{
 }
 header span {
 	margin-left: 12px;
-	font-family: Roboto-Bold;
+	font-weight: 700;
 	font-size: 18px;
 	color: #3C3C3C;
-}
-p {
-	font-family: Roboto-Regular;
 }
